--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script  src = "first.js"></script>
     <script  src = "third.js"></script>
+    <script  src = "Array.js"></script>
 </body>
 </html>
