--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script  src = "first.js"></script>
     <script  src = "third.js"></script>
     <script  src = "Array.js"></script>
+    <script  src = "func&med.js"></script>
 </body>
 </html>
