--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "style.css"/>
 </head>
 <body>
+
+    <h2>Hello JavaScript!</h2>
+    <div class = "box">First</div>
+    <div class = "box">Second</div>
+    <div class = "box">Third</div>
     <script  src = "first.js"></script>
     <script  src = "third.js"></script>
     <script  src = "Array.js"></script>
     <script  src = "func&med.js"></script>
+    <script  src = "dom.js"></script>
 </body>
 </html>
